--- a/index.html
+++ b/index.html
@@ -526,17 +526,18 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Sahyadri College of Engineering and Management</h4>
 
-              <span>2007 — 2008</span>
+              <span>2021 — 2025</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+               Robotics and Automation professional with expertise in automation, kinematics, and data-driven decision-making. Experienced in designing robotic systems, data preprocessing, and statistical analysis. Skilled in Python, C, Power BI, MySQL, and SolidWorks, combining technical precision with analytical insight to develop efficient robotic solutions and extract meaningful patterns from data. 
+
               </p>
 
             </li>
+
+        <!--
 
             <li class="timeline-item">
 
@@ -566,7 +567,7 @@
             </li>
 
           </ol>
-
+-->
         </section>
 
         <section class="timeline">
