--- a/index.html
+++ b/index.html
@@ -582,37 +582,42 @@
 
           <ol class="timeline-list">
 
+         <li class="timeline-item">
+    <div class="timeline-header">
+        <h4 class="timeline-item-title">Data Analyst Intern</h4>
+        <span class="timeline-date">Feb — Current</span>
+    </div>
+    <p class="timeline-text">
+        Worked on model development, hyperparameter tuning, feature selection, data preprocessing, and performance visualization.
+    </p>
+</li>
+
+<li class="timeline-item">
+    <div class="timeline-header">
+        <h4 class="timeline-item-title">Data Analyst Intern</h4>
+        <span class="timeline-date">Feb 2022 — Oct 2024</span>
+    </div>
+    <p class="timeline-text">
+        Assisted in data collection, cleaning, and preprocessing to ensure high-quality analysis, while also automating data reporting and creating dashboards.
+    </p>
+</li>
+
+
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Data Analyst Intern</h4>
 
-              <span>2015 — Present</span>
+              <span>Feb 2022 — Oct 2024</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Assisted in data collection, cleaning, and preprocessing to ensure high-quality analysis, while also automating data reporting and creating dashboards to support decision-making.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
-
-              <span>2013 — 2015</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Intern</h4>
 
               <span>2010 — 2013</span>
 
