--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">SQL & Database Management</h5>
-                <data value="80>80%</data>
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
