--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my_pic.jpg" alt="Nireeksha NK" width="80">
+          <img src="./assets/images/my_pic.png" alt="Nireeksha NK" width="80" style="border-radius: 50%; overflow: hidden;">
+
         </figure>
 
         <div class="info-content">
