--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 
       <div class="sidebar-info">
 
-        <figure class="avatar-box">
-         <img src="assets/images/my_pic.png" alt="Nireeksha NK" class="rounded-img">
+        <figure class="avatar-box"><img src="./assets/images/my_pic.png" alt="Nireeksha NK" width="80" style="border-radius: 50%; overflow: hidden;">
 
         </figure>
 
