--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="sidebar-info">
 
-        <figure class="avatar-box"><img src="./assets/images/my_pic.png" alt="Nireeksha NK" width="80" style="border-radius: 50%; overflow: hidden;">
+      <img src="./assets/images/my_pic.png" alt="Nireeksha NK" width="80">
 
         </figure>
 
@@ -127,11 +127,11 @@
 
         <ul class="social-list">
 
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
+      <li class="social-item">
+  <a href="https://www.linkedin.com/in/nireeksha-nk-455349249/" class="social-link" target="_blank">
+    <ion-icon name="logo-linkedin"></ion-icon>
+  </a>
+</li>
 
           <li class="social-item">
             <a href="#" class="social-link">
