--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="sidebar-info">
 
-      <img src="./assets/images/my_pic.png" alt="Nireeksha NK" width="80">
+      <img src="./assets/images/my_pic.jpg" alt="Nireeksha NK" width="80">
 
         </figure>
 
