--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
 
         <ul class="social-list">
 
-      <li class="social-item">
+ <li class="social-item">
   <a href="https://www.linkedin.com/in/nireeksha-nk-455349249/" class="social-link" target="_blank">
-    <ion-icon name="logo-linkedin"></ion-icon>
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" width="30">
   </a>
 </li>
+
 
           <li class="social-item">
             <a href="#" class="social-link">
@@ -180,11 +181,11 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
-
+<!--
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li>
-
+-->
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
