--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 </li>
 
 
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
+   <li class="social-item">
+  <a href="https://github.com/nireekshank26" class="social-link" target="_blank">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" width="30">
+  </a>
+</li>
 
           <li class="social-item">
             <a href="#" class="social-link">
