--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="location-outline"></ion-icon>
+              <ion-icon name="assets/images/location.png"></ion-icon>
             </div>
 
             <div class="contact-info">
