--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
 </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
+  <a href="https://www.instagram.com/nireekshank26/" class="social-link" target="_blank">
+    <ion-icon name="logo-instagram"></ion-icon>
+  </a>
+</li>
+
 
         </ul>
 
