--- a/index.html
+++ b/index.html
@@ -124,35 +124,41 @@
 
         </ul>
 
-        <div class="separator"></div>
+   <div class="main-content">
 
-        <ul class="social-list">
+      <!--
+        - #NAVBAR
+      -->
 
- <li class="social-item">
-  <a href="https://www.linkedin.com/in/nireeksha-nk-455349249/" class="social-link" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" width="30">
-  </a>
-</li>
+      <nav class="navbar">
 
+        <ul class="navbar-list">
 
-   <li class="social-item">
-  <a href="https://github.com/nireekshank26" class="social-link" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" width="30">
-  </a>
-</li>
+          <li class="navbar-item">
+            <button class="navbar-link  active" data-nav-link>About</button>
+          </li>
 
-          <li class="social-item">
-  <a href="https://www.instagram.com/nireekshank26/" class="social-link" target="_blank">
-    <ion-icon name="logo-instagram"></ion-icon>
-  </a>
-</li>
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Resume</button>
+          </li>
 
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Portfolio</button>
+          </li>
+
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Blog</button>
+          </li>
+
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Contact</button>
+          </li>
 
         </ul>
 
-      </div>
+      </nav>
 
-    </aside>
+
 
 
 
