--- a/index.html
+++ b/index.html
@@ -124,6 +124,37 @@
 
         </ul>
 
+  <div class="separator"></div>
+
+        <ul class="social-list">
+
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
+        </ul>
+
+      </div>
+
+    </aside>
+
+
+
+
 
     <!--
       - #main-content
@@ -139,7 +170,7 @@
 
         <ul class="navbar-list">
 
-             <li class="navbar-item">
+          <li class="navbar-item">
             <button class="navbar-link  active" data-nav-link>About</button>
           </li>
 
@@ -159,10 +190,11 @@
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
 
-
         </ul>
 
       </nav>
+
+
 
 
 
