--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://github.com/nireekshank26" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://www.linkedin.com/in/nireeksha-nk-455349249/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/nireeksha.nk?igsh=bjhvcnN1aGN3OG1r&utm_source=qr" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
