--- a/index.html
+++ b/index.html
@@ -181,10 +181,11 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
-
+<!--
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li>
+          -->
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -239,10 +240,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Data Analysis</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Transforming raw data into meaningful insights using statistical and analytical techniques.
                 </p>
               </div>
 
@@ -255,10 +256,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Data Visualization</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Creating interactive dashboards and reports with Power BI, Tableau, and Python libraries like Matplotlib & Seaborn.
                 </p>
               </div>
 
@@ -271,10 +272,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Machine Learning & Predictive Analytics</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                 Building predictive models and statistical analysis using Python, SQL, and ML algorithms.
                 </p>
               </div>
 
@@ -287,15 +288,46 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Business Intelligence</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                Leveraging data to drive business decisions and improve operational efficiency.
                 </p>
               </div>
 
             </li>
 
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Data Cleaning & Preprocessing</h4>
+
+                <p class="service-item-text">
+              Ensuring high-quality, structured data for accurate analysis and reporting.
+                </p>
+              </div>
+
+            </li>
+            
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Automation & Scripting</h4>
+
+                <p class="service-item-text">
+             Automating data workflows using Python, SQL, and cloud-based solutions.
+                </p>
+              </div>
+
+            </li>
           </ul>
 
         </section>
