--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
-<!--
+
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li>
-          -->
+          
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -252,7 +252,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="assets/images/statistics.png" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
