--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="/assets/images/icon-dev.png" width="40">
+                <img src="./assets/images/icon-dev.svg" width="40">
               </div>
 
               <div class="service-content-box">
@@ -316,7 +316,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/automation.png" alt="camera icon" width="40">
+                <img src="assets/images/head.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
