--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 -->
 
 
-      <!--
+     <!--
         - #RESUME
       -->
 
@@ -561,18 +561,17 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Sahyadri College of Engineering and Management</h4>
+              <h4 class="h4 timeline-item-title">University school of the arts</h4>
 
-              <span>2021 — 2025</span>
+              <span>2007 — 2008</span>
 
               <p class="timeline-text">
-               Robotics and Automation professional with expertise in automation, kinematics, and data-driven decision-making. Experienced in designing robotic systems, data preprocessing, and statistical analysis. Skilled in Python, C, Power BI, MySQL, and SolidWorks, combining technical precision with analytical insight to develop efficient robotic solutions and extract meaningful patterns from data. 
-
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
               </p>
 
             </li>
-
-        
 
             <li class="timeline-item">
 
@@ -617,42 +616,37 @@
 
           <ol class="timeline-list">
 
-         <li class="timeline-item">
-    <div class="timeline-header">
-        <h4 class="timeline-item-title">Data Analyst Intern</h4>
-        <span class="timeline-date">Feb — Current</span>
-    </div>
-    <p class="timeline-text">
-        Worked on model development, hyperparameter tuning, feature selection, data preprocessing, and performance visualization.
-    </p>
-</li>
-
-<li class="timeline-item">
-    <div class="timeline-header">
-        <h4 class="timeline-item-title">Data Analyst Intern</h4>
-        <span class="timeline-date">Feb 2022 — Oct 2024</span>
-    </div>
-    <p class="timeline-text">
-        Assisted in data collection, cleaning, and preprocessing to ensure high-quality analysis, while also automating data reporting and creating dashboards.
-    </p>
-</li>
-
-
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Data Analyst Intern</h4>
+              <h4 class="h4 timeline-item-title">Creative director</h4>
 
-              <span>Feb 2022 — Oct 2024</span>
+              <span>2015 — Present</span>
 
               <p class="timeline-text">
-                Assisted in data collection, cleaning, and preprocessing to ensure high-quality analysis, while also automating data reporting and creating dashboards to support decision-making.
+                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
+                molestias
+                exceptur.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Intern</h4>
+              <h4 class="h4 timeline-item-title">Art director</h4>
+
+              <span>2013 — 2015</span>
+
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Web designer</h4>
 
               <span>2010 — 2013</span>
 
@@ -677,20 +671,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Data Cleaning & Preprocessing</h5>
-                <data value="95">95%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 95%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">SQL & Database Management</h5>
+                <h5 class="h5">Web design</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -703,12 +684,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Power BI and Tableau</h5>
-                <data value="90">80%</data>
+                <h5 class="h5">Graphic design</h5>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
             </li>
@@ -716,12 +697,25 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Advanced Excel </h5>
+                <h5 class="h5">Branding</h5>
                 <data value="90">90%</data>
               </div>
 
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">WordPress</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
 
             </li>
@@ -978,7 +972,7 @@
 
       <!--
         - #BLOG
-      
+      -->
 
       <article class="blog" data-page="blog">
 
@@ -1181,7 +1175,8 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://maps.app.goo.gl/Wjf8jdJnrk7TdSZn9?g_st=com.google.maps.preview.copy"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+              width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
 
