--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>About</button>
+            <button class="navbar-link active" data-nav-link>About</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link active" data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
           <li class="navbar-item">
@@ -337,7 +337,6 @@
         <!--
           - testimonials
         
-
         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
