--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
   <figure class="avatar-box">
-  <img src="./assets/images/my-pic.jpg" alt="Nireeksha NK" width="80">
+  <img src="./assets/images/my_pic.jpg" alt="Nireeksha NK" width="80">
 
         </figure>
 
