--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="assets/images/statistics.png" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -280,7 +279,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="assets/images/business-intelligence.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -296,7 +295,7 @@
              <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="assets/images/data-cleaning.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -311,7 +310,7 @@
              <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="assets/images/head.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
