--- a/index.html
+++ b/index.html
@@ -790,8 +790,8 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Customer Segmentation">
+              <a href="https://github.com/your-username/Customer-Segmentation/blob/main/customer_segmentation.ipynb">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
