--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="Customer Segmentation">
-              <a href="https://github.com/your-username/Customer-Segmentation/blob/main/customer_segmentation.ipynb">
+              <a href="https://github.com/nireekshank26/Customer-segmentation.git">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
