--- a/index.html
+++ b/index.html
@@ -741,15 +741,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>1</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>2</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>3</button>
             </li>
 
           </ul>
@@ -773,15 +773,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>1</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>2</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>3</button>
               </li>
 
             </ul>
@@ -801,15 +801,15 @@
                   <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Customer Segmentation</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">1</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="HR Analytics">
+              <a href="https://github.com/nireekshank26/HR-Analytics.git">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -819,9 +819,9 @@
                   <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">HR Analytics</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">2</p>
 
               </a>
             </li>
