--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Customer Segmentation">
+            <li class="project-item  active" data-filter-item data-category="1">
               <a href="https://github.com/nireekshank26/Customer-segmentation.git">
 
                 <figure class="project-img">
@@ -798,7 +798,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-1.jpg" alt="customer segmentation" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Customer Segmentation</h3>
