--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="HR Analytics">
+            <li class="project-item  active" data-filter-item data-category="2">
               <a href="https://github.com/nireekshank26/HR-Analytics.git">
 
                 <figure class="project-img">
@@ -827,19 +827,19 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="*">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/img.jpg" alt="3 DOF Articulated Robot" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title"> 3 DOF Articulated Robot</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">3</p>
 
               </a>
             </li>
