--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="3">
               <a href="*">
 
                 <figure class="project-img">
@@ -844,7 +844,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="3">
               <a href="#">
 
                 <figure class="project-img">
@@ -852,12 +852,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/project-4.png" alt="6 DOF articulated Robot" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">6 DOF articulated Robot</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">3</p>
 
               </a>
             </li>
