--- a/index.html
+++ b/index.html
@@ -898,20 +898,20 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="1">
+              <a href="https://github.com/nireekshank26/Sentiment-Analysis.git">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/project-7.png" alt="Sentiment Analysis" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">Sentiment Analysis</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">1</p>
 
               </a>
             </li>
