--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="mailto:nireeksha2603@gmail.com" class="form" data-form>
+<form action="https://formspree.io/f/mkgodznv" method="POST">
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
