--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://maps.app.goo.gl/Wjf8jdJnrk7TdSZn9?g_st=com.google.maps.preview.copy"
+              src="https://maps.app.goo.gl/b6nuGVPnzK6XWeo77"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
@@ -987,7 +987,7 @@
 
             <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
 
-            <button class="form-btn" type="submit" disabled data-form-btn>
+            <button class="form-btn" type="submit" data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
             </button>
