--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://maps.app.goo.gl/b6nuGVPnzK6XWeo77"
+              src="https://maps.app.goo.gl/ihX4EYxbN4LmqWC4A?g_st=com.google.maps.preview.copy"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
