--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="mob:+91 8792897141" class="contact-link">+(91) 8792897141</a>
+              <a href="tel:+91 8792897141" class="contact-link">+(91) 8792897141</a>
             </div>
 
           </li>
@@ -205,11 +205,11 @@
 
         <section class="about-text">
           <p>
-            "I'm a Data Analyst with a keen eye for patterns and precision. I specialize in data cleaning, preprocessing, and statistical analysis using Excel, Power BI, and MySQL. My focus is on transforming raw data into clear, actionable insights that drive smarter decisions."
+            I'm a Data Analyst with a keen eye for patterns and precision. I specialize in data cleaning, preprocessing, and statistical analysis using Excel, Power BI, and MySQL. My focus is on transforming raw data into clear, actionable insights that drive smarter decisions.
           </p>
 
           <p>
-           "My job is to make data clear, accurate, and valuable. I focus on ensuring data is well-structured, insightful, and easy to interpret. Beyond just analysis, I bring a strategic approach to uncover trends and support informed decision-making. My goal is to turn raw data into meaningful information that drives results."
+           My job is to make data clear, accurate, and valuable. I focus on ensuring data is well-structured, insightful, and easy to interpret. Beyond just analysis, I bring a strategic approach to uncover trends and support informed decision-making. My goal is to turn raw data into meaningful information that drives results.
           </p>
         </section>
 
