--- a/index.html
+++ b/index.html
@@ -554,10 +554,7 @@
               <span>2021 — 2025</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics, Robot Operating System, Algorithms, Data Structures, and Python, with a current **CGPA of 7.6.**              </p>
 
             </li>
 
@@ -568,8 +565,7 @@
               <span>2019 — 2021</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+              Studied Computer Science with a focus on Physics, Chemistry, Mathematics, and C++, securing **90%.** 
               </p>
 
             </li>
@@ -581,9 +577,7 @@
               <span>2016 — 2019</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Completed high school with a strong academic foundation, securing **90.24%** (2016–2019).
               </p>
 
             </li>
@@ -604,19 +598,14 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Data Analyst Intern</h4>
-
-              <span>Feb 2025 — Present</span>
-
-              <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
-              </p>
-
-            </li>
+          <li class="timeline-item">
+    <h4 class="h4 timeline-item-title">Data Analyst Intern</h4>
+    <span style="float: right;">Feb 2025 – Present</span>
+    <p class="timeline-text">
+        Working on ML models including RF, SVR, RVR, KRR, and GPR, along with SQL and Excel for data analysis.
+    </p>
+    <div style="clear: both;"></div>
+</li>
 
             <li class="timeline-item">
 
