--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
               <span>2021 — 2025</span>
 
               <p class="timeline-text">
-Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics, Robot Operating System, Algorithms, Data Structures, and Python, with a current **CGPA of 7.6.**              </p>
+Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics, Robot Operating System, Algorithms, Data Structures, and Python, with a current <B>CGPA of 7.6.</B>              </p>
 
             </li>
 
@@ -565,7 +565,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
               <span>2019 — 2021</span>
 
               <p class="timeline-text">
-              Studied Computer Science with a focus on Physics, Chemistry, Mathematics, and C++, securing **90%.** 
+              Studied Computer Science with a focus on Physics, Chemistry, Mathematics, and C++, securing <B>90%.</B> 
               </p>
 
             </li>
@@ -577,7 +577,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
               <span>2016 — 2019</span>
 
               <p class="timeline-text">
-                Completed high school with a strong academic foundation, securing **90.24%** (2016–2019).
+                Completed high school with a strong academic foundation, securing <B>90.24%</B> (2016–2019).
               </p>
 
             </li>
@@ -599,13 +599,15 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
           <ol class="timeline-list">
 
           <li class="timeline-item">
-    <h4 class="h4 timeline-item-title">Data Analyst Intern</h4>
-    <span style="float: right;">Feb 2025 – Present</span>
+    <h4 class="h4 timeline-item-title">Centre for System Design</h4>
+    <i>Data Analyst Intern</i>
+    <span style="float: right; color: #d4af37;"><b>Feb 2025 – Present</b></span>
     <p class="timeline-text">
         Working on ML models including RF, SVR, RVR, KRR, and GPR, along with SQL and Excel for data analysis.
     </p>
     <div style="clear: both;"></div>
 </li>
+
 
             <li class="timeline-item">
 
