--- a/index.html
+++ b/index.html
@@ -601,8 +601,8 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
           <ol class="timeline-list">
             
 <li class="timeline-item">
-    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #d4af37;">Centre for System Design</h4>
-    <i>Data Analyst Intern</i>
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Centre for System Design</h4>
+    <i style="color: #d4af37;">Data Analyst Intern</i>
     <span style="float: right; color: #d4af37;"><b>Feb 2025 – Present</b></span>
     <p class="timeline-text">
         Working on ML models including RF, SVR, RVR, KRR, and GPR, along with SQL and Excel for data analysis.
@@ -611,8 +611,8 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
 </li>
 
 <li class="timeline-item">
-    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #d4af37;">Challengers</h4>
-    <i>Data Analyst Intern</i>
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Challengers</h4>
+    <i style="color: #d4af37;">Data Analyst Intern</i>
     <span style="float: right; color: #d4af37;"><b>Feb 2022 – Oct 2024</b></span>
     <p class="timeline-text">
         Mangalore, Karnataka
@@ -625,8 +625,8 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
 </li>
 
 <li class="timeline-item">
-    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #d4af37;">ComedKares</h4>
-    <i>Intern</i>
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">ComedKares</h4>
+    <i style="color: #d4af37;">Intern</i>
     <span style="float: right; color: #d4af37;"><b>Oct 2023 – Nov 2023</b></span>
     <p class="timeline-text">
         Mangalore, Karnataka
@@ -637,6 +637,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
     </ul>
     <div style="clear: both;"></div>
 </li>
+
 
 
 
