--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
           <ol class="timeline-list">
             
 <li class="timeline-item">
-    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Centre for System Design</h4>
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Centre for System Design, NITK, Mangalore</h4>
     <i style="color: #d4af37;">Data Analyst Intern</i>
     <span style="float: right; color: #d4af37;"><b>Feb 2025 – Present</b></span>
     <p class="timeline-text">
@@ -611,11 +611,9 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
 </li>
 
 <li class="timeline-item">
-    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Challengers</h4>
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Challengers, Mangalore</h4>
     <i style="color: #d4af37;">Data Analyst Intern</i>
     <span style="float: right; color: #d4af37;"><b>Feb 2022 – Oct 2024</b></span>
-    <p class="timeline-text">
-        Mangalore, Karnataka
     </p>
     <ul class="timeline-text">
         <li>Assisted in data collection, cleaning, and preprocessing, ensuring high data quality for analysis.</li>
@@ -625,11 +623,10 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
 </li>
 
 <li class="timeline-item">
-    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">ComedKares</h4>
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">ComedKares, Mangalore</h4>
     <i style="color: #d4af37;">Intern</i>
     <span style="float: right; color: #d4af37;"><b>Oct 2023 – Nov 2023</b></span>
-    <p class="timeline-text">
-        Mangalore, Karnataka
+        
     </p>
     <ul class="timeline-text">
         <li>Participated in an internship program following AICTE guidelines, emphasizing design thinking and rapid prototyping.</li>
