--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://maps.app.goo.gl/ihX4EYxbN4LmqWC4A?g_st=com.google.maps.preview.copy"
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124440.40060574484!2d74.77007092741759!3d12.92297928360918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba35a4c37bf488f%3A0x827bbc7a74fcfe64!2sMangaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1740903233341!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
