--- a/index.html
+++ b/index.html
@@ -701,6 +701,19 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
 
             </li>
 
+ <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Python</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+
           </ul>
 
         </section>
