--- a/index.html
+++ b/index.html
@@ -635,6 +635,52 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
     <div style="clear: both;"></div>
 </li>
 
+          </ol>
+
+        </section>
+
+     <!--
+ COURSES AND CERTFICATIONS
+  -->
+            <h3 class="h3">Course</h3>
+          </div>
+
+          <ol class="timeline-list">
+            
+<li class="timeline-item">
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;"> Introduction to Generative AI</h4>
+    <i style="color: #d4af37;">Google Cloud</i>
+    <p class="timeline-text">
+         Learned the fundamentals of generative AI, including models, applications, and ethical considerations.    </p>
+    <div style="clear: both;"></div>
+</li>
+
+<li class="timeline-item">
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">SQL - MySQL for Data Analytics and Business Intelligence</h4>
+    <i style="color: #d4af37;">365 Careers, 365 Team - Udemy</i>
+    <ul class="timeline-text">
+        <li>Gained expertise and hands-on experience in SQL queries, database management, and data analysis for business insights.</li>
+    </ul>
+    <div style="clear: both;"></div>
+</li>
+
+<li class="timeline-item">
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Microsoft Excel - Excel from Beginner to Advanced</h4>
+    <i style="color: #d4af37;">Kyle Pew, Office Newb - Udemy</i>
+        <p>Gained expertise and hands-on experience in Excel functions, pivot tables, and data visualization techniques.
+    </p>
+    <div style="clear: both;"></div>
+</li>
+
+<li class="timeline-item">
+    <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Power BI A-Z: Hands-On Power BI Training for Data Science</h4>
+    <i style="color: #d4af37;">Kirill Eremenko, SuperDataScience Team- Udemy</i>
+        <p>Gained expertise and hands-on experience in building interactive dashboards and performing data-driven decision-making using Power BI.
+    </p>
+    <div style="clear: both;"></div>
+</li>
+
+
 
 
 
@@ -642,6 +688,10 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
           </ol>
 
         </section>
+   
+<!--
+        skills
+        -->
 
         <section class="skill">
 
@@ -719,7 +769,6 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
         </section>
 
       </article>
-
 
 
 
