--- a/index.html
+++ b/index.html
@@ -592,9 +592,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
             </div>
-<!--
-  EXPERIENCE
-  -->
+
             <h3 class="h3">Experience</h3>
           </div>
 
@@ -636,7 +634,12 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
 
         </section>
 
+ <section class="timeline">
 
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
             <h3 class="h3">Course</h3>
           </div>
 
@@ -678,7 +681,6 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
           </ol>
 
         </section>
-  
 
         <section class="skill">
 
