--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
             </div>
-            <h3 class="h3">Course</h3>
+            <h3 class="h3">Courses and Certifications</h3>
           </div>
 
           <ol class="timeline-list">
@@ -665,16 +665,20 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
 <li class="timeline-item">
     <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Microsoft Excel - Excel from Beginner to Advanced</h4>
     <i style="color: #d4af37;">Kyle Pew, Office Newb - Udemy</i>
-        <p>Gained expertise and hands-on experience in Excel functions, pivot tables, and data visualization techniques.
-    </p>
+   <ul class="timeline-text">
+        <li>Gained expertise and hands-on experience in Excel functions, pivot tables, and data visualization techniques.
+    </li>
+   </ul>
     <div style="clear: both;"></div>
 </li>
 
 <li class="timeline-item">
     <h4 class="h4 timeline-item-title" style="font-weight: normal; font-style: normal; color: #FFFFFF;">Power BI A-Z: Hands-On Power BI Training for Data Science</h4>
     <i style="color: #d4af37;">Kirill Eremenko, SuperDataScience Team- Udemy</i>
-        <p>Gained expertise and hands-on experience in building interactive dashboards and performing data-driven decision-making using Power BI.
-    </p>
+<ul class="timeline-text">
+        <li>Gained expertise and hands-on experience in building interactive dashboards and performing data-driven decision-making using Power BI.
+    </li>
+          </ul>
     <div style="clear: both;"></div>
 </li>
 
