--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@ Pursuing Robotics and Automation Engineering with coursework in Robot Kinematics
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="6 DOF articulated Robot" loading="lazy">
+                  <img src="./assets/images/download.jpg" alt="6 DOF articulated Robot" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">6 DOF articulated Robot</h3>
